# rlog-agent

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: agent.proto  auth.proto  health.proto  log.proto
src/: collector.rs  forwarder.rs  health.rs  main.rs  models.rs  proto.rs  settings.rs  streamer.rs
src/auth/: client.rs  interceptor.rs  mod.rs  token_manager.rs
