[package]
name = "rlog-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
notify = "8.2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
config = { version = "0.15.19", features = ["yaml"] }
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
tonic = { version = "0.14.2", features = ["transport"] }
prost = "0.14.3"

[build-dependencies]
tonic-prost-build = "0.14.2"
